<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_total">Bill Amount</string>
    <string name="tip_percent">Select Tip Percentage</string>
    <string name="split_people">Split between?</string>
    <string name="total_tip">Total Tip Amount:</string>
    <string name="split_tip">Tip per person:</string>

</resources>
